crates/toml/tests/snapshots/invalid/bool/mixed-case-false.stderr
TOML parse error at line 1, column 27
  |
1 | mixed-case-false        = falsE
  |                           ^^^^^
invalid boolean, expected `false`
